# Glia-AI

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCP_SETUP.md  PLATFORM_SELECTORS.md  RAG_PIPELINE.md  README.md  ROADMAP.md  SECURITY.md  SELF_HOSTING.md  TROUBLESHOOTING.md  bump_version.js  docker-compose.lite.yml  docker-compose.yml  install.bat  install.sh  package-lock.json  package.json  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration-tests.yml  release.yml  selector-check.yml
backend/: .env.example  .gitignore  jest.config.json  package-lock.json  package.json  synq.db-shm  synq.db-wal  test-output.txt  tsconfig.json
backend/scripts/: benchmark-rag.ts  generate-stress-test.ts  inspect-db.ts  mcp-audit.ts  mcp-benchmark.ts  mcp-setup.ts  mcp-stress-test.ts  rag-audit.ts  test-backup.ts
backend/src/: index.ts
backend/tests/: jobs.test.ts  pipeline.integration.test.ts
dashboard/: .env.example  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: lib.rs
extension/: .gitignore  ArcRift.xpi  manifest.json  package-lock.json  package.json
extension/popup/: popup.css  popup.html  popup.ts
extension/scripts/: build.js
extension/src/: background.ts  content.ts
reports/: benchmark_mcp.md  benchmark_web.md  graph_stress_test.md  mcp_stress_test.md
scripts/: check-selectors.js
(+76 files in other folders)
